--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,8 +30,9 @@
 
     <FrameLayout
         android:id="@+id/container"
-        android:layout_below="@id/tabs"
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
