--- a/app/src/main/res/layout/listview_custom.xml
+++ b/app/src/main/res/layout/listview_custom.xml
@@ -6,32 +6,48 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/iv_img"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:id="@+id/iv_employees_profile"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginRight="15dp"/>
 
         <LinearLayout
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_employees_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="name.."/>
+                android:text="이름"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:id="@+id/tv_contents"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="contents.." />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_weight="1"
+                    android:id="@+id/tv_employees_department"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="부서" />
+
+                <TextView
+                    android:layout_weight="1"
+                    android:id="@+id/tv_employees_position"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="직급" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
