--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@color/colorWhite"/>
+        android:drawable="@color/colorPrimary"/>
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/and_logo_for_splash"/>
+            android:src="@drawable/and_logo_"/>
     </item>
 </layer-list>
