--- a/app/src/main/res/layout/fragment_employees.xml
+++ b/app/src/main/res/layout/fragment_employees.xml
@@ -71,6 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="관리부"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
@@ -81,6 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="경영지원실"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
@@ -91,6 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="PI사업부"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
@@ -109,6 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="계량기 사업 1부"
                     android:textSize="17sp"
                     android:textColor="@color/colorWhite"
@@ -119,6 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="계량기 사업 2부"
                     android:textSize="17sp"
                     android:textColor="@color/colorWhite"
@@ -129,6 +134,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="계측기 사업부"
                     android:textSize="17sp"
                     android:textColor="@color/colorWhite"
@@ -147,6 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="부설연구소"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
@@ -157,6 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="CS 사업부"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
@@ -167,6 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginRight="3dp"
                     android:text="교정센터"
                     android:textSize="20sp"
                     android:textColor="@color/colorWhite"
