--- a/app/src/main/res/layout/listview_custom.xml
+++ b/app/src/main/res/layout/listview_custom.xml
@@ -2,47 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_employees_profile"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:background="@color/colorWhite"
             android:layout_marginRight="15dp"/>
 
         <LinearLayout
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_employees_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
-                android:textSize="20sp"
-                android:text="이름"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_employees_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="16sp"
+                    android:layout_marginRight="5dp"
+                    android:text="이름"/>
+
+                <TextView
+                    android:id="@+id/tv_employees_position"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="직급" />
+            </LinearLayout>
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/tv_employees_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="부서" />
-
-            <TextView
-                android:layout_weight="1"
-                android:id="@+id/tv_employees_position"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="직급" />
 
         </LinearLayout>
 
