--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="rounded_textview_background_padding">5dp</dimen>
+    <dimen name="button_background_padding">7dp</dimen>
 </resources>
