--- a/app/src/main/res/layout/fragment_departments.xml
+++ b/app/src/main/res/layout/fragment_departments.xml
@@ -4,15 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    android:padding="15dp"
     tools:context=".EmployeesFragment">
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/lv_departments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"/>
+        android:groupIndicator="@null"
+        android:childIndicator="@null"/>
 
 </FrameLayout>
