--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorCategory">#bd181d</color>
+    <color name="colorBoardPreview">#aeb3b9</color>
+    <color name="colorBoardPage">#eaeaea</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDivisionBackground">#323233</color>
     <color name="colorView">#D3D5D8</color>
