--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
+    <style name="whiteTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">@color/colorWhite</item>
+    </style>
+
 </resources>
