--- a/app/src/main/res/layout/activity_board_detail.xml
+++ b/app/src/main/res/layout/activity_board_detail.xml
@@ -8,35 +8,11 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:background="?attr/colorPrimary"-->
-<!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-        <Button
-            android:id="@+id/button_memo"
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
-            android:text="메모 작성"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:layout_gravity="end"/>
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/whiteTheme">
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_employee_detail" />
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_margin="@dimen/fab_margin"-->
-<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
+    <include layout="@layout/content_board_detail" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
