--- a/app/src/main/res/layout/listview_boards.xml
+++ b/app/src/main/res/layout/listview_boards.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
+    android:layout_marginTop="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -94,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="0"/>
+                android:text="좋아요"/>
 
             <ImageView
                 android:layout_width="wrap_content"
