--- a/app/src/main/res/layout/listview_board_header.xml
+++ b/app/src/main/res/layout/listview_board_header.xml
@@ -3,27 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    android:layout_marginTop="5dp"
+    android:padding="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/ll_board_comment_container"
+        android:id="@+id/ll_board_header_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:padding="15dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_board_category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="카테고리"
-            android:textSize="15sp"
-            android:textColor="@color/colorCategory"/>
-
-        <TextView
-            android:id="@+id/tv_board_title"
+            android:id="@+id/tv_board_header_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="제목"
@@ -31,71 +22,80 @@
             android:textColor="@color/colorBlack"/>
 
         <TextView
-            android:id="@+id/tv_board_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="내용"
-            android:textSize="15sp"
-            android:textColor="@color/colorBoardPreview"/>
-
-        <TextView
-            android:id="@+id/tv_board_writer"
+            android:id="@+id/tv_board_header_writer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="작성자"
             android:textSize="14sp"
             android:textColor="@color/colorBlack"/>
+
+        <TextView
+            android:id="@+id/tv_board_header_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="날짜"/>
     </LinearLayout>
 
     <View
-        android:id="@+id/v_board_line"
+        android:id="@+id/v_board_header_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ll_board_comment_container"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/ll_board_header_container"
         android:background="@color/colorView"/>
-    
-    <LinearLayout
-        android:id="@+id/ll_board_count_view"
+
+    <TextView
+        android:id="@+id/tv_board_header_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/v_board_line"
+        app:layout_constraintTop_toBottomOf="@+id/v_board_header_line"
+        android:layout_marginTop="15dp"
+        android:text="내용"
+        android:textSize="15sp"
+        android:textColor="@color/colorBoardPreview"/>
+    
+    <LinearLayout
+        android:id="@+id/ll_board_header_count_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tv_board_header_content"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/ll_board_header_like_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="7.5"
-            android:padding="15dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/icon_eye"/>
-
-            <TextView
-                android:id="@+id/tv_board_click_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="2321"/>
-
-            <ImageView
-                android:id="@+id/iv_board_like"
+                android:id="@+id/iv_board_header_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/icon_like"/>
 
             <TextView
-                android:id="@+id/tv_board_like_count"
+                android:id="@+id/tv_board_header_like_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="좋아요"/>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorView"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                 android:background="@drawable/icon_comment"/>
 
             <TextView
-                android:id="@+id/tv_board_comment_count"
+                android:id="@+id/tv_board_header_comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -112,39 +112,30 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_weight="2"
-            android:padding="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tv_board_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="날짜"/>
-
-        </LinearLayout>
-
         <View
-            android:id="@+id/v_board_count_view_line"
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/colorView"/>
 
         <LinearLayout
-            android:layout_weight="0.5"
-            android:padding="15dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/iv_board_tag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/icon_tag"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/icon_comment"/>
+
+            <TextView
+                android:id="@+id/tv_board_header_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="공유하기"/>
 
         </LinearLayout>
 
