--- a/app/src/main/res/layout/listview_board_header.xml
+++ b/app/src/main/res/layout/listview_board_header.xml
@@ -118,6 +118,7 @@
             android:background="@color/colorView"/>
 
         <LinearLayout
+            android:id="@+id/ll_board_header_share_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
