--- a/app/src/main/res/layout/activity_board_detail.xml
+++ b/app/src/main/res/layout/activity_board_detail.xml
@@ -11,6 +11,13 @@
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/whiteTheme">
 
+        <ImageView
+            android:id="@+id/iv_board_detail_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:background="@drawable/icon_more"/>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_board_detail" />
